--- a/store/templates/store/item_modal.html
+++ b/store/templates/store/item_modal.html
@@ -17,7 +17,7 @@
     <div class="modal-content">
       <div class="modal-body"></div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-info closemodal" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-dark btn-outline-secondary mt-auto text-white closemodal" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
