--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -29,7 +29,7 @@
             </div>
         </header>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'store:index' %}">Accueil</a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -73,10 +73,10 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 {% if contact != 0 %}
                                     <li>
-                                        <a class="dropdown-item" href="{% if contact != 0 %}{% url 'store:profil' contact_id=contact.id %}{% else %}{% url 'store:index' %}{% endif %}">Profil</a>
+                                        <a class="dropdown-item link-secondary text-decoration-none" href="{% if contact != 0 %}{% url 'store:profil' contact_id=contact.id %}{% else %}{% url 'store:index' %}{% endif %}">Profil</a>
                                     </li>
                                 {% endif %}
-                                <li><a class="dropdown-item" href="{% url 'store:logout' %}">Déconnexion</a></li>
+                                <li><a class="dropdown-item text-decoration-none" href="{% url 'store:logout' %}">Déconnexion</a></li>
                             </ul>
                         </div>
                         {% else %}
