--- a/store/templates/store/paginate.html
+++ b/store/templates/store/paginate.html
@@ -5,29 +5,29 @@
             <ul class="pagination">
             {% if ouvrages.has_previous %}
                 <li class="page-item">
-                    <a class="btn btn-outline-dark mt-auto" href="?page=1"><i class="bi bi-chevron-bar-left me-1"></i></a>
+                    <a class="btn btn-outline-secondary mt-auto" href="?page=1"><i class="bi bi-chevron-bar-left me-1"></i></a>
                 </li>
                 {% if ouvrages.previous_page_number|add:'-1' >= 1 %}
                     <li class="page-item">
-                        <a class="btn btn-outline-dark mt-auto" href="?page={{ ouvrages.previous_page_number|add:'-1' }}">{{ ouvrages.number|add:"-2" }}</a>
+                        <a class="btn btn-outline-secondary mt-auto" href="?page={{ ouvrages.previous_page_number|add:'-1' }}">{{ ouvrages.number|add:"-2" }}</a>
                     </li>
                 {% endif %}
                 <li class="page-item">
-                    <a class="btn btn-outline-dark mt-auto" href="?page={{ ouvrages.previous_page_number }}">{{ ouvrages.number|add:"-1" }}</a>
+                    <a class="btn btn-outline-secondary mt-auto" href="?page={{ ouvrages.previous_page_number }}">{{ ouvrages.number|add:"-1" }}</a>
                 </li>
             {% endif %}
-                <li class="page-item active"><a class="btn btn-outline-dark mt-auto page-link" href="">{{ ouvrages.number }}</a></li>
+                <li class="page-item active"><a class="btn btn-dark btn-outline-secondary mt-auto text-white" href="">{{ ouvrages.number }}</a></li>
             {% if ouvrages.has_next %}
                 <li class="page-item">
-                    <a class="btn btn-outline-dark mt-auto" href="?page={{ ouvrages.next_page_number }}">{{ ouvrages.number|add:"1" }}</a>
+                    <a class="btn btn-outline-secondary mt-auto" href="?page={{ ouvrages.next_page_number }}">{{ ouvrages.number|add:"1" }}</a>
                 </li>
                 {% if ouvrages.next_page_number|add:'1' <= ouvrages.paginator.num_pages %}
                     <li class="page-item">
-                        <a class="btn btn-outline-dark mt-auto" href="?page={{ ouvrages.next_page_number|add:'1' }}">{{ ouvrages.number|add:"2" }}</a>
+                        <a class="btn btn-outline-secondary mt-auto" href="?page={{ ouvrages.next_page_number|add:'1' }}">{{ ouvrages.number|add:"2" }}</a>
                     </li>
                 {% endif %}
                 <li class="page-item">
-                    <a class="btn btn-outline-dark mt-auto" href="?page={{ ouvrages.paginator.num_pages }}"><i class="bi bi-chevron-bar-right me-1"></i></a>
+                    <a class="btn btn-outline-secondary mt-auto" href="?page={{ ouvrages.paginator.num_pages }}"><i class="bi bi-chevron-bar-right me-1"></i></a>
                 </li>
             {% endif %}
             </ul>
