--- a/store/templates/store/profil.html
+++ b/store/templates/store/profil.html
@@ -2,28 +2,42 @@
 
 {% block content %}
 {% if user.is_staff or user.id == contact.user.id %}
-<hr class="detail-separator">
-<h1 class="intro-text text-center">{{ contact.user.username }}</h1>
-<hr class="detail-separator">
-<div class="row">
-    <div class="col-3">
-        {% include 'store/user_detail.html' %}
-    </div>
-    <div class="col-6">
-        {% include 'store/contact_detail.html' %}
-    </div>
-
-    <div class="col-3">
-        <div class="row form-group">
-            <label class="form-control" for="{{ CForm_dsa.id_for_label }}">Historique de Commandes</label><br />
-            {% for booking in contact.bookings.all %}
-                <p><a class="open-item" href="{% url 'store:booking_detail' booking_id=booking.id %}"
-                    data-popup-url="{% url 'store:booking_detail' booking_id=booking.id %}">
-                    {{ booking.created_at }}
-                </a></p>
-            {% endfor %}
+<div class="card container">
+    <hr class="detail-separator">
+    <h1 class="intro-text text-center">{{ contact.default_shipping_address.first_name }} {{ contact.default_shipping_address.last_name }}</h1>
+    <hr class="detail-separator">
+    <div class="row">
+        <div class="col-3">
+            <label class="form-control bg-dark fs-5 fw-bold text-light">Mes Identifiants</label><br />
+            <a class="open-item text-decoration-none text-body" href="{% url 'store:user_detail' user_id=user.id %}"
+                data-popup-url="{% url 'store:user_detail' user_id=user.id %}">
+                {{ contact.user.username }}</a>
+            {% if messages %}
+                {% for message in messages %}
+                {% autoescape off %}
+                    <p class="">{{ message }}</p>
+                {% endautoescape %}
+                {% endfor %}
+            {% endif %}
+        </div>
+        <div class="col-6">
+            {% include 'store/contact_detail.html' %}
+        </div>
+    
+        <div class="card col-3">
+            <div class="row form-group">
+                <label class="form-control bg-dark fs-5 fw-bold text-light">Historique de Commandes</label><br />
+                {% for booking in contact.bookings.all %}
+                    <p><a class="open-item text-decoration-none text-body" href="{% url 'store:booking_detail' booking_id=booking.id %}"
+                        data-popup-url="{% url 'store:booking_detail' booking_id=booking.id %}">
+                        <i class="bi bi-basket3 me-1"></i> Commande N° {{ booking.id }}<br />
+                        du {{ booking.created_at }}
+                    </a></p>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </div>
+{% include "store/item_modal.html" %}
 {% endif %}
 {% endblock %}
